# registrationMplus

./: .gitignore  CMakeLists.txt  Dockerfile  contributors.txt  readme.md  readme.txt  singularity.def
2DRegistration/2DRecMultiSushort/src/: 2DRecMultiSushort.cxx  CMakeLists.txt
2DRegistration/2DRecMultiTuchar/src/: 2DRecMultiTuchar.cxx  CMakeLists.txt
3DRegistration/: 3DRecMultiRigid_ddd.cxx  CMakeLists.txt
3DRegistration/3DRecBsplineNGFshort/src/: 3DRecBsplinesNGFshort.cxx
3DRegistration/3DRecBsplinesMANGF2short/LBuild/: .project
3DRegistration/3DRecBsplinesMANGF2short/src/: 3DRecBsplinesMANGF2short.cxx
3DRegistration/3DRecBsplinesMANGFshort/src/: 3DRecBsplinesMANGFshort.cxx  CMakeLists.txt
3DRegistration/3DRecBsplinesMANGFushort/src/: CMakeLists.txt
3DRegistration/3DRecBsplinesushort/src/: 3DRecBsplinesushort.cxx
3DRegistration/3DRecMultiAshort/src/: CMakeLists.txt
3DRegistration/3DRecMultiAushort/src/: 2d.cxx
3DRegistration/3DRecMultiBshort/LBuild/: .project  CMakeCache.txt  Makefile  mr_T1
3DRegistration/3DRecMultiBshort/src/: 3DRecMultiBshort.cxx  readme.txt
3DRegistration/3DRecMultiRshort/src/: 3DRecMultiRshort.cxx
3DRegistration/3DRecMultiRushort/src/: CMakeLists.txt
3DRegistration/3DRecMultiTuchar/src/: CMakeLists.txt
3DRegistration/3DRecMultiTushort/Lbuild/: .cproject
3DRegistration/3DRecMultiTushort/src/: 3DRecMultiTushort.cxx
RIREEvaluation/: CMakeLists.txt
Utils/3DATLASWarpWithDF/src/: 3DATLASWarpWithDF.cxx  CMakeLists.txt
Utils/3Dinitializer/src/: 3Dinitializer.cxx  CMakeLists.txt
include/: readme.md  (+3 more)
src/: CMakeLists.txt
src/2DRegistration/: CMakeLists.txt
src/2DRegistration/2DRecMultiBuShort/src/: 2DRecMultiBuShort.cxx  CMakeLists.txt
src/2DRegistration/2DRecMultiRuchar/src/: 2DRecMultiRuchar.cxx
src/2DRegistration/2DRecMultiRushort/src/: CMakeLists.txt
src/2DRegistration/2DRecMultiSuchar/src/: CMakeLists.txt
src/2DRegistration/2DRecMultiTushort/src/: 2DRecMultiTushort.cxx  CMakeLists.txt
src/3DRegistration/: CMakeLists.txt  Version.h  readme.md
src/3DRegistration/3DRecAffine/src/: 3DRecAffine.cxx  CMakeLists.txt
src/3DRegistration/3DRecBsplineNGFshort/src/: CMakeLists.txt
src/3DRegistration/3DRecBsplinesMANGF2short/LBuild/: .cproject  CMakeCache.txt  Makefile  cmake_install.cmake
src/3DRegistration/3DRecBsplinesMANGF2short/src/: CMakeLists.txt
src/3DRegistration/3DRecBsplinesMANGFushort/src/: 3DRecBsplinesMANGFushort.cxx
src/3DRegistration/3DRecBsplines_new/src/: 3DRecBsplines_new.cxx  Version.h
src/3DRegistration/3DRecBsplinesushort/src/: 3DRecBsplinesushort.cxx  CMakeLists.txt
src/3DRegistration/3DRecMultiAshort/src/: 3DRecMultiAshort.cxx
src/3DRegistration/3DRecMultiAushort/src/: 3DRecMultiAushort.cxx  CMakeLists.txt  Version.h
src/3DRegistration/3DRecMultiBshort/LBuild/: .cproject  cmake_install.cmake  ct
src/3DRegistration/3DRecMultiBshort/src/: 2  CMakeLists.txt
src/3DRegistration/3DRecMultiRshort/src/: CMakeLists.txt
src/3DRegistration/3DRecMultiRushort/src/: 3DRecMultiRushort.cxx  aa  old3DRec.cxx
src/3DRegistration/3DRecMultiSshort/src/: 3DRecMultiSshort.cxx  CMakeLists.txt
src/3DRegistration/3DRecMultiSshort/srcv4/: 3DRecMultiSushort.cxx
src/3DRegistration/3DRecMultiSushort/srcv4/: CMakeLists.txt
src/3DRegistration/3DRecMultiTshort/src/: 3DRecMultiTshort.cxx  CMakeLists.txt  Version.h
src/3DRegistration/3DRecMultiTuchar/src/: 3DRecMultiTuchar.cxx
src/3DRegistration/3DRecMultiTushort/Lbuild/: .project  CMakeCache.txt  Makefile  cmake_install.cmake
src/3DRegistration/3DRecMultiTushort/src/: CMakeLists.txt
src/3DRegistration/3DRegAffine/src/: 3DRegAffine.cxx  3DRegAffineMultiLevel.cxx  3DRegSimilarity.cxx  CMakeLists.txt  Version.h
src/3DRegistration/3DRegBsplines/src/: 3DRegBsplines.cxx  CMakeLists.txt
src/3DRegistration/3DTto3Dversortfm/src/: 3DTto3Dversortfm.cxx  CMakeLists.txt
src/Metrics/MANGF2ImageToImageMetric/: itkMANGF2.hxx
src/Metrics/MANGF2ImageToImageMetric/Code/: itkImageToNGFFilter.txx
src/Metrics/MANGFImageToImageMetric/: itkMANGF.hxx
src/Metrics/MANGFMSEImageToImageMetric/: itkMANGFMSE.hxx
src/Metrics/Mplus/: itkMANGF.h  itkMANGF.hxx  itkMANGFMSE.h  itkMANGFMSE.hxx  itkMplus.h  itkMplus.hxx
src/Metrics/NGF/NGFImageMetric/: CMakeLists.txt
src/Metrics/NGF/NGFImageMetric/NGFImageToImageMetric/: make-paper.sh
src/Metrics/NGF/NGFImageMetric/NGFImageToImageMetric/Code/: itkGetImageNoiseFunction.h  itkImageToNGFFilter.h  itkImageToNGFFilter.txx  itkMyDefines.h  itkNGFMetricKernel.h  itkNGFMetricKernel.txx  itkNormalizedGradientFieldImageToImageMetric.h  itkNormalizedGradientFieldImageToImageMetric.txx  reamd.md
src/Metrics/NGF/NGFImageMetric/NGFImageToImageMetric/Doc/: InsightArticle.cls  InsightJournal.bib  NGFImageMetric.tex
src/RIREEvaluation/ReadTXTApoint/src/: CMakeLists.txt  ReadTXTApoint.cxx
src/RIREEvaluation/ReadTXTBpoint/src/: CMakeLists.txt  ReadTXTBpoint.cxx
src/RIREEvaluation/ReadTXTSpoint/src/: ReadTXTSpoint.cxx  ReadTXTSpoint.cxx~
src/RIREEvaluation/ReadTXTTpoint/src/: CMakeLists.txt  ReadTXTTpoint.cxx
src/RIREEvaluation/ReadTXTVF/LBuild/: .project  CMakeCache.txt  cmake_install.cmake
src/Utils/: CMakeLists.txt
src/include/: commandRSG.h  commandVERSOR.h  funzioni.h  funzioniIO.h  funzioniIOtranformationTXT  itkHistogramToTextureFeaturesFilterExtended.h  itkHistogramToTextureFeaturesFilterExtended.hxx  linf.h  mymath.h  old_funzioni.h  registrationUtils.h
src/includes/: imageUtils.h  registrationUtils.h  registrationUtils_dev.h
src/test/: CMakeLists.txt  test1.cxx  test2.cxx  test3.cxx  test4.cxx
src/trial/BSPLINEv43d/: tmpl3.cxx  tpl2.cxx
src/trial/BSPLINEv43d/2DFFDMANGF/: 2DFFDMANGF.cxx  CMakeLists.txt
src/trial/BSPLINEv43d/2DFFDMANGF/LBuild/: Makefile  cmake_install.cmake
src/trial/BSPLINEv43d/3/: DeformableRegistration13.cxx
src/trial/BSPLINEv43d/3DMANGFrecFFDShrink/: 3DMANGFrecFFDShrink.cxx
src/trial/BSPLINEv43d/3DMANGFrecFFDShrink/LBuild/: .cproject  CMakeCache.txt
src/trial/BSPLINEv43d/src/: 2DRecMultiBuchar_oldd.cxx
trial/BSPLINEv43d/src/: 2DRecMultiBuchar.cxx  CMakeLists.txt
(+51 files in other folders)
