ADD_SUBDIRECTORY(2DRecMultiTushort/src)
ADD_SUBDIRECTORY(2DRecMultiTuchar/src)

ADD_SUBDIRECTORY(2DRecMultiRuchar/src)
ADD_SUBDIRECTORY(2DRecMultiRushort/src)


ADD_SUBDIRECTORY(2DRecMultiSuchar/src)
ADD_SUBDIRECTORY(2DRecMultiSushort/src)



#ADD_SUBDIRECTORY(2DRecFemChar/src) #verion1
#ADD_SUBDIRECTORY(2DRecMultiAchar/src) #version1
#ADD_SUBDIRECTORY(2DRecMultiAushort/src) #version1
#ADD_SUBDIRECTORY(2DRecMultiBChar/src)
#ADD_SUBDIRECTORY(2DRecMultiBuShort/src)
#ADD_SUBDIRECTORY(2DRecMultiRchar/src)
#ADD_SUBDIRECTORY(2DRecMultiRushort/src)
#ADD_SUBDIRECTORY(2DRecMultiSchar/src)
#ADD_SUBDIRECTORY(2DRecMultiSushort/src)
#ADD_SUBDIRECTORY(2DRecMultiTchar/src)

 #ADD_SUBDIRECTORY(2DRecDemonsChar/src)
#ADD_SUBDIRECTORY(UN/src)
